11/30/12 integrate work done in team/cmalley/html5/jquerymobile-test (Options overlay panel)
11/29/12 add caching of compass needles (SR)
11/28/12 rename src dir to app
11/28/12 delete empty resources dir
11/28/12 move nls dir to top level
11/28/12 move images dir to top level
11/28/12 move faraday.html to top level
11/28/12 delete data dir
11/28/12 delete empty dirs
11/28/12 remove "html" from string file names
11/28/12 delete copies of 3rd-party libs, point at contrib
11/28/12 add fr strings for i18n testing
11/28/12 faraday-html -> faraday
11/26/12 delete jquery import from html file
11/26/12 when compass is inside magnet, immediate snap needle to field orientation
11/26/12 normalize compass needle angle in kinematics algorithm
11/26/21 BarMagnet.getFieldVector -> getFieldAt
11/26/12 fix: update field display when it becomes visible
11/26/12 display frame rate in canvas
11/26/12 complete i18n of all HTML widgets
11/26/12 add i18n support
11/26/12 move mvt to view (private var of FaradayStage)
11/26/12 chain graphics calls in FaradayStage
11/26/12 convert from Ticket.getInterval to frames for compass animation
11/26/12 animate compass kinematics using Verlet algorithm
11/26/12 thisInstance -> that
11/26/12 wire up Easel.Ticker to call model.tick, so we can animate the compass; add stub for Compass.tick
11/21/12 change CSS to use a sans serif font for HTML controls
11/21/12 fix: make field meter observe magnet orientation
11/21/12 rename view-specific properties to match how they are presented to the user
11/21/12 get rid of Field model element, handle field visibility in the view
11/21/12 patch up Canvas in CanvasQuirks
11/21/12 implement FaradayStage using inheritance instead of composition
11/21/12 switch from Combination Inheritance to Parasitic Combination Inheritance throughout
11/21/12 chain calls to Easel.Graphics methods
11/21/12 for closures, rename thisDisplayObject -> that
11/21/12 rename FieldDisplay -> FieldOutsideDisplay