@@ -1,3 +1,4 @@
+11/30/12 add some requirejs stuff for jquery and jquery.mobile that i'm not really sure about
 11/30/12 integrate work done in team/cmalley/html5/jquerymobile-test (Options overlay panel)
 11/29/12 add caching of compass needles (SR)
 11/28/12 rename src dir to app
